--- a/eyes.css
+++ b/eyes.css
@@ -10,6 +10,8 @@ body {
   transform: translateY(-50%);
   width: 100%;
   text-align: center;
+
+
 }
 .eye {
   width: 240px;
@@ -30,4 +32,52 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50%;
+}
+
+.crazy {
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 600;
+  font-size: 2.5em;
+  letter-spacing: .3em;
+  background-color: #000000;
+  padding: .25em;
+}
+
+.leftBrow {
+  max-width: 10%;
+  margin-bottom: -2em;
+  padding-right: 1em;
+  margin-top: 5em;
+}
+.rightBrow {
+  max-width: 10%;
+  margin-bottom: -2em;
+  padding-left: 1em;
+  margin-top: 2em;
+}
+
+.nose {
+display: flex;
+justify-content: center;
+display: hidden;
+
+}
+
+.lips {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3em;
+}
+
+.nose-img {
+  width: 250px;
+  padding-bottom: 2em;
+  display: hidden;
+}
+
+.lips-img {
+  width: 250px;
 }
